Fixed <main> padding to align with promo and header/footer blocks

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -4,7 +4,6 @@
 @import (reference) 'constants.less';
 
 body {
-	min-width: @const-max-content-width;
 	-webkit-font-smoothing: antialiased;
 	font-family: -apple-system, system-ui, BlinkMacSystemFont, sans-serif;
 
