--- a/src/styles/constants.less
+++ b/src/styles/constants.less
@@ -1,5 +1,4 @@
 // Common
-@const-max-content-width: 1200px;
 @const-border-radius: 10px;
 @const-header-offset: 110px;
 
