--- a/src/styles/routes/Public.module.less
+++ b/src/styles/routes/Public.module.less
@@ -13,7 +13,7 @@
 	> main {
 		position: relative;
 
-		width: 90%;
-		max-width: 1200px;
+		width: 100%;
+		padding: 0 10%;
 	}
 }
